# letter

./: Cargo.toml  README.md
letter-script-examples/: example.letter
migrations/: 20230811130513_init-db.sql
src/: main.rs  schema.rs  tasks
src/app/: logger.rs  mod.rs
src/command/: mod.rs
src/frame_buffer/: mod.rs
src/parser/: .letter.db  letter-script.pest  mod.rs
src/store/: mod.rs
src/ui/: mod.rs  textarea.rs
src/ui/panel/: badge_select_panel.rs  debug_panel.rs  mod.rs  overview_panel.rs  search_panel.rs  task_note_panel.rs  task_panel.rs
