[package]
name = "letter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25"
ratatui = { version = "0.22.0", features = ["all-widgets"]}
uuid = "*"
sqlx = { version = "0.7", features = ["runtime-async-std", "sqlite"] }
async-std = { version = "1.12.0", features = ["attributes"] }
dotenv = "0.15.0"
