[package]
name = "letter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25"
ratatui = { version = "0.22.0", features = ["all-widgets"]}
uuid = "*"
dotenv = "0.15.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rustic-fuzz = "0.1.0"
