[package]
name = "letter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parser"
path = "src/parser/mod.rs"

[[bin]]
name = "letter"
path = "src/main.rs"

[dependencies]
crossterm = "0.25"
ratatui = { version = "0.22.0", features = ["all-widgets"]}
uuid = "*"
dotenv = "0.15.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rustic-fuzz = "0.1.0"
log = { version = "*", features = ["std"] }
pest = "2.7.3"
pest_derive = "2.7.3"
